# spiel-des-jahres

./: .cruft.json  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
data/: kindersdj.csv  ksdj.csv  sdj.csv
docs/: api_docs.md
src/spiel_des_jahres/: data.py  ratings.py  utils.py
